# tide_analytics

./: .gitignore  404.html  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: full_test.yml
docs/: getting_started.md  index.md
getting_started/: index.html
notebooks/: how_to.ipynb
reference/: index.html
tests/: test_basic.py
tide_analytics/: __init__.py  helpers.py  tidal_area.py  tidal_series.py
