[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# location of package relative to the repository root (e.g. alternatively "src/tide_analytics")
# note: the package name 'tide_analytics' can be different from the project name on PyPI
#       the project name (PyPI) is used for pip install, whereas the package name is used for imports
packages = ["tide_analytics"]  

[tool.hatch.build.targets.sdist]
exclude = ["notebooks", "tests", "images"]

[project]
# name on PyPI (e.g. pip install tide_analytics)
name = "tide_analytics"
version = "0.0.1"
dependencies = [
    "numpy",
    "pandas",
    "mikeio",
    "scikit-learn",
    "matplotlib",
    "scipy",
]

authors = [
  { name="Faro Schäfer", email="fsch@dhigroup.com" },
]
description = "A python library for analyzing tides from timeseries data."
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 2 - Pre-Alpha",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]

[project.optional-dependencies]
dev = [
  "build",
  "pytest",
  "ruff",
  "mypy",
  "mkdocs",
  "mkdocstrings[python]", 
  "mkdocs-material"
]

test= [
  "pytest",
  "pytest-cov",
  "mypy",
]

notebooks = [
  "jupyter",
]

[project.urls]
"Homepage" = "https://github.com/DHI/tide_analytics"
"Bug Tracker" = "https://github.com/DHI/tide_analytics/issues"


[tool.ruff]
# ignore long lines
lint.ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unreachable = false
no_implicit_optional = true
